--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://g3f4.github.io/warsaw-workshop-31",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "@types/classnames": "^2.2.7",
     "@types/jest": "24.0.11",
     "@types/moment-timezone": "^0.5.12",
