--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "warsawjs-workshop-31-calendar-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Express server serving client app and api",
   "main": "index.js",
   "author": "G3F4",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "1.18.3",
     "chance": "1.0.18",
     "express": "4.16.4",
-    "moment-timezone": "^0.5.23"
+    "moment-timezone": "0.5.23",
+    "morgan": "1.9.1"
   },
   "scripts": {
+    "client:build": "rm -rf public && tar -zxvf client-package.tar.gz && mv build public",
     "dev": "MOCKS=true nodemon index.js",
-    "start": "MOCKS=true node index.js"
+    "start": "yarn run client:build && MOCKS=true node index.js"
   },
   "devDependencies": {
     "nodemon": "1.18.10"
