--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "agenda": "2.0.2",
     "body-parser": "1.18.3",
     "chance": "1.0.18",
     "express": "4.16.4",
@@ -15,7 +16,8 @@
     "mongoose": "5.4.21",
     "morgan": "1.9.1",
     "passport": "0.4.0",
-    "passport-github": "1.1.0"
+    "passport-github": "1.1.0",
+    "web-push": "3.3.3"
   },
   "scripts": {
     "client:build": "rm -rf public && tar -zxvf client-package.tar.gz && mv build public",
