--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "body-parser": "1.18.3",
     "express": "4.16.4",
     "morgan": "1.9.1"
   },
