--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "1.18.3",
     "express": "4.16.4",
     "express-session": "1.15.6",
+    "moment-timezone": "^0.5.23",
+    "mongoose": "^5.4.22",
     "morgan": "1.9.1",
     "passport": "0.4.0",
     "passport-github": "1.1.0"
