--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "agenda": "^2.0.2",
     "body-parser": "1.18.3",
     "express": "4.16.4",
     "express-session": "1.15.6",
