--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "agenda": "2.0.2",
     "body-parser": "1.18.3",
     "chance": "1.0.18",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
+    "dotenv": "7.0.0",
     "express": "4.16.4",
     "express-session": "1.15.6",
     "moment-timezone": "0.5.23",
@@ -22,8 +23,8 @@
   },
   "scripts": {
     "client:build": "rm -rf public && tar -zxvf client-package.tar.gz && mv build public",
-    "dev": "yarn run client:build && nodemon index.js",
-    "start": "yarn run client:build && DB=remote node index.js"
+    "dev": "yarn run client:build && nodemon -r dotenv/config index.js",
+    "start": "yarn run client:build && node -r dotenv/config index.js"
   },
   "devDependencies": {
     "nodemon": "1.18.10"
