--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "private": false,
   "dependencies": {
     "body-parser": "1.18.3",
+    "cors": "2.8.5",
+    "dotenv": "7.0.0",
     "express": "4.16.4",
     "morgan": "1.9.1"
   },
   "scripts": {
     "client:build": "rm -rf public && tar -zxvf client-package.tar.gz && mv build public",
-    "dev": "yarn run client:build && nodemon index.js",
-    "start": "yarn run client:build && DB=remote node index.js"
+    "dev": "yarn run client:build && nodemon -r dotenv/config index.js",
+    "start": "yarn run client:build && node -r dotenv/config index.js"
   },
   "devDependencies": {
     "nodemon": "1.18.10"
